--- a/src/components/mainComponent.css
+++ b/src/components/mainComponent.css
@@ -2,6 +2,13 @@
     margin: 2rem 20rem;
 }
 
+h1 {
+    text-align: center;
+    font-size: 22px;
+    font-weight: 600;
+    font-family: 'Poppins', 'Nato-sans', sans-serif;
+}
+
 .task-list {
     width: 100%;
     height: fit-content;
@@ -13,6 +20,11 @@
 p {
     margin: 0;
     width: fit-content;
+    font-family: 'Poppins', 'Nato-sans', sans-serif;
+    font-size: 16px;
+    font-weight: 500;
+    letter-spacing: 0.4px;
+    line-break: auto;
 }
 
 .divw {
